공통 서브페이지 작업중

--- a/app/scss/_variable.scss
+++ b/app/scss/_variable.scss
@@ -2,8 +2,13 @@ $desktop: 1024px !default;
 $tablet: 1023px !default;
 $mobile: 599px !default;
 
+$headerPcHeight: 100rem;
+$headerMoHeight: 60rem;
+
+
 // primary 
-$riizeOrange: #f0a240;
+$riizePrimary: #000000;
+$riizeSecondary: #f0a240;
 
 
 // grayscale
