--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -6,34 +6,102 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 80rem;
-  background: #000;
-  z-index: 10;
+  height: $headerPcHeight;
+  background: $riizePrimary;
+  z-index: 20;
   .inner {
-    padding: 20rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: relative;
+    // padding: 16rem 12rem;
+    // width: 100%;
+    height: 100%;
+  }
+  .logo {
+    // position: absolute;
+    // top: 50%;
+    // left: 0;
+    // transform: translate(0, -50%);
+    font-size: 48rem;
+    font-weight: 700;
+    line-height: $headerPcHeight;
+    font-style: italic;
+    color: #fff;
+  }
+  .btn-menu {
+    display: none;
+  }
+  .all-menu {
+    display: none;
+  }
+  .pc-menu {
+    display: flex;
+    align-items: center;
+    gap: 0 60rem;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    .one-depth {
+      // position: relative;
+      .one-link {
+        display: flex;
+        align-items: center;
+        height: $headerPcHeight;
+        color: $white;
+        &:hover {
+          color: $riizeSecondary;
+        }
+      }
+      .one-list {
+        position: absolute;
+        top: calc($headerPcHeight - 2rem);
+        left: 50%;
+        width: 100vw;
+        height: 0;
+        transform: translateX(-50%);
+        // width: 100vw;
+        // background: #000;
+        overflow: hidden;
+        &.active {
+          height: auto;
+        }
+      }
+      .two-depth {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        background: #000;
+        border-top: 0.8px solid $white;
+        .two-link {
+          display: block;
+          padding: 24rem 20rem;
+          color: $white;
+          &:hover {
+            color: $riizeSecondary;
+          }
+        }
+      }
+    }
   }
 }
 
 @include tablet() {
-.header {
-  width: 100%;
-  height: 80rem;
-    .inner {
-      display: flex;
-      align-items: center;
-      position: relative;
-      padding: 16rem 12rem;
-      width: 100%;
-      height: 100%;
-    }
+  .header {
+    width: 100%;
+    height: $headerMoHeight;
+    // .inner {
+    //   padding: 16rem 12rem;
+    // }
     .logo {
       position: absolute;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      font-size: 48rem;
+      font-size: 40rem;
       font-weight: 700;
-      line-height: 80rem;
+      line-height: $headerMoHeight;
       font-style: italic;
       color: #fff;
     }
@@ -88,9 +156,13 @@
       //   color: #fff;
       // }
     }
-    .menu-area {
+    .pc-menu {
+      display: none;
+    }
+    .all-menu {
+      display: block;
       position: fixed;
-      top: 80rem;
+      top: $headerMoHeight;
       // left: -100%;
       left: 0;
       width: 100%;
@@ -107,7 +179,7 @@
             border-bottom: 1px solid $gray300;
             .one-link {
               border-bottom: 1px solid $gray300;
-              color: $riizeOrange;
+              color: $riizeSecondary;
               .open-two-depth {
                 &::before {
                   content: "";
@@ -119,7 +191,7 @@
                   width: 20rem;
                   height: 4px;
                   border-radius: 4px;
-                  background: $riizeOrange;
+                  background: $riizeSecondary;
                 }
                 &::after {
                   content: "";
@@ -131,7 +203,7 @@
                   width: 4px;
                   height: 20rem;
                   border-radius: 4px;
-                  background: $riizeOrange;
+                  background: $riizeSecondary;
                 }
               }
             }
@@ -152,11 +224,11 @@
           }
           &:hover {
             & > a {
-              color: $riizeOrange;
+              color: $riizeSecondary;
             }
             .open-two-depth {
               &::before, &:after {
-                background: $riizeOrange;
+                background: $riizeSecondary;
               }
             }
           }
@@ -176,7 +248,7 @@
               width: 20rem;
               height: 4px;
               border-radius: 4px;
-              background: $black;
+              background: $riizePrimary;
               transition: background .3s ease-out;
             }
             &::after {
@@ -189,7 +261,7 @@
               width: 4px;
               height: 20rem;
               border-radius: 4px;
-              background: $black;
+              background: $riizePrimary;
               transition: transform .3s ease-out, background .3s ease-out;
             }
           }
@@ -199,7 +271,7 @@
         overflow: hidden;
         .two-list:hover {
           .two-link {
-            color: $riizeOrange;
+            color: $riizeSecondary;
           }
         }
         .two-link {
@@ -213,6 +285,4 @@
       }
     }
   }
-
-
 }
