--- a/app/scss/_main.scss
+++ b/app/scss/_main.scss
@@ -1,171 +1,169 @@
 @use "mixin" as *;
 @use "variable" as *;
 
+main {
+  padding: 80rem 0;
+  section+section {
+    margin: 80rem 0 0;
+  }
+  .sc-chart {
+    .tit-area {
+      display: flex;
+      align-items: flex-end;
+    }
+    .chart-time {
+      display: block;
+      margin: 0 0 0 24rem;
+      color: $gray500;
+    }
+    .chart-container {
+      width: 100%;
+    }
+    .chart-swiper {
+      .scroll-area {
+        width: 1240rem;
+        margin: 0 auto;
+        // padding: 0 240rem 24rem 240rem;
+        @include grid(2, 48rem, 0);
+        overflow-x: scroll;
+      }
+    }
+  }
+  .sc-oneclick {
+    .container {
+      width: 100%;
+      // margin: 24rem 0 0;
+      @include grid(4, 48rem, 24rem);
+      .box {
+        width: 100%;
+        border-radius: 20rem;
+        background: $gray100;
+        i {
+          display: block;
+          padding: 28rem;
+          margin: 0 auto;
+          width: 72rem;
+          height: 72rem;
+          text-align: center;
+        }
+      }
+      .txt {
+        margin: 18rem 0 0;
+        text-align: center;
+      }
+    }
+  }
+  .sc-todolist {
+    .todolist-wrap {
+      padding: 40rem;
+      border: 1px solid $gray400;
+      border-radius: 12rem;
+      .list {
+        &+.list {
+          margin: 28rem 0 0;
+        }
+      }
+    }
+    .input-wrap {
+      display: flex;
+      align-items: center;
+      position: relative;
+
+      input[type="checkbox"] {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 30rem;
+        height: 30rem;
+        cursor: pointer;
+
+        &~.checkbox {
+          width: 30rem;
+          height: 30rem;
+          border-radius: 6rem;
+          border: 1px solid $gray900;
+        }
+
+        &~label {
+          position: relative;
+          &::after {
+            content: "";
+            position: absolute;
+            top: 50%;
+            left: 0;
+            transform: translate(0, -50%);
+            width: 0;
+            height: 4px;
+            background: $riizeSecondary;
+            transition: width .3s ease-out;
+          }
+        }
+        &:checked~label {
+          &::after {
+            width: 100%;
+          }
+        }
+      }
+      label {
+        margin: 0 0 0 12rem;
+        cursor: pointer;
+      }
+    }
+  }
+}
+
 @include tablet() {
   main {
-    padding: 40rem 0;
+    padding: 80rem 0;
     section + section {
       margin: 40rem 0 0;
     }
-    .sc-rank {
-      .inner {
-        padding: 0 24rem 0 24rem;
-      }
+    .sc-chart {
       .tit-area {
         display: flex;
         align-items: flex-end;
         justify-content: space-between;
       }
-      .rank-time {
+      .chart-time {
         display: block;
         margin: 6rem 0 0;
-        font-size: 16rem;
         color: $gray500;
         font-weight: 300;
       }
-      .rank-container {
+      .chart-container {
         width: 100%;
-        // padding: 0 0 0 24rem;
-        // margin: 24rem 0 0;
       }
-      .rank-swiper {
+      .chart-swiper {
         .scroll-area {
           padding: 0 24rem 12rem 24rem;
           width: 100%;
           @include grid(2, 24rem, 0);
           overflow-x: scroll;
         }
-        .rank-content {
-          flex-grow: 1;
-          width: 320rem;
-          .rank-wrap {
-            display: flex;
-            flex-direction: column;
-          }
-          .rank-list {
-            padding: 18rem 12rem;
-            height: 100%;
-            border-bottom: 1px solid $gray400;
-            &:nth-child(1) {
-              border-top: 1px solid $gray400;
-            }
-            &.melon .cate {
-              color: $pointMelon;
-            }
-            &.genie .cate {
-              color: $pointGenie;
-            }
-            &.bugs .cate {
-              color: $pointBugs;
-            }
-            &.flo .cate {
-              color: $pointFlo;
-            }
-            .cate {
-              font-size: 16rem;
-              font-weight: 700;
-            }
-            &:has(.cate) .rank-box {
-              margin-top: 12rem;
-            }
-            .rank-box {
-              display: flex;
-              justify-content: space-between;
-              width: 100%;
-              // height: 100%;
-            }
-            .tit {
-              font-size: 18rem;
-              align-self: flex-start;
-              @include multiEllipsis(2);
-            }
-            .divide {
-              text-align: right;
-              .rank {
-                text-align: right;
-                width: 54rem;
-                font-size: 20rem;
-                font-weight: 700;
-                margin: 0 0 0 12rem;
-                span {
-                  font-size: 16rem;
-                  font-weight: 400;
-                }
-              }
-              .rank-change {
-                display: block;
-                margin: 8rem 0 0;
-                font-size: 16rem;
-                font-weight: 400;
-              }
-            }
-            .rank-change {
-              font-size: 16rem;
-              &::before {
-                content: "-";
-                margin: 0 6rem 0;
-              }
-              &.up {
-                color: $pointRed;
-                &::before {
-                  content: "▲";
-                  font-size: 14rem;
-                }
-              }
-              &.down {
-                color: $pointBlue;
-                &::before {
-                  content: "▼";
-                  font-size: 14rem;
-                }
-              }
-            }
-          }
-        }
       }
     }
     .sc-oneclick {
-      .inner {
-        padding: 0 24rem;
-      }
-      .tit {
-        font-size: 24rem;
-        font-weight: 500;
-      }
       .container {
         // margin: 24rem 0 0;
+        width: 100%;
         @include grid(4, 24rem, 12rem);
         .box {
           width: 100%;
           border-radius: 20rem;
-          background: $gray100;
           i {
-            display: block;
             padding: 14rem;
-            margin: 0 auto;
             width: 36rem;
             height: 36rem;
-            text-align: center;
           }
         }
         .txt {
           margin: 12rem 0 0;
-          text-align: center;
         }
       }
     }
     .sc-todolist {
-      .inner {
-        padding: 0 24rem;
-      }
-      .tit {
-        font-size: 24rem;
-        font-weight: 500;
-      }
       .todolist-wrap {
-        // margin: 24rem 0 0;
         padding: 20rem;
-        border: 1px solid $gray400;
         border-radius: 8rem;
         .list {
           & + .list {
@@ -188,7 +186,6 @@
             width: 20rem;
             height: 20rem;
             border-radius: 6rem;
-            border: 1px solid $gray900;
           }
           & ~label {
             position: relative;
@@ -200,8 +197,7 @@
                 transform: translate(0, -50%);
                 width: 0;
                 height: 2px;
-                background: $riizeOrange;
-                transition: width .3s ease-out;
+                background: $riizeSecondary;
               }
           }
           &:checked ~ label {
@@ -212,7 +208,6 @@
         }
         label {
           margin: 0 0 0 8rem;
-          font-size: 18rem;
           cursor: pointer;
         }
       }
