--- a/app/scss/common.scss
+++ b/app/scss/common.scss
@@ -1,9 +1,14 @@
 @use "reset" as *;
 @use "variable" as *;
 @use "mixin" as *;
+@use "fonts" as *;
+@use "button" as *;
+@use "tab" as *;
 @use "header" as *;
 @use "footer" as *;
+@use "chart" as *;
 @use "main" as *;
+@use "sub" as *;
 
 @include tablet {
   html {
@@ -15,34 +20,26 @@
   html {
     font-size: 0.256vw;
   }
-
   #subPage {
     overflow: hidden;
   }
 }
 
-.nav-bar {
-  display: flex;
-  position: sticky;
-  bottom: 0;
-  left: 0;
-  z-index: 10;
-  width: 100%;
-  align-items: center;
-  background: $white;
-  a {
-    display: block;
-    padding: 12rem 0;
-    width: calc(100% / 5);
-    text-align: center;
-    font-size: 14rem;
-  }
-  .nav-icon {
-    display: block;
-    width: 24rem;
-    margin: 0 auto;
-  }
+body:has(.header .btn-menu.active) {
+  overflow-y: hidden;
 }
+
+.scroll-x-active {
+  // position: relative;
+  overflow-x: auto;
+  &::-webkit-scrollbar {
+    width: 0;
+    height: 0;
+  }
+}   
+.nav-bar {
+  display: none;
+}    
 footer {
   padding: 16rem 0;
   background: $gray100;
@@ -52,11 +49,81 @@ footer {
     font-size: 16rem;
   }
 }
-
-.tit-area {
-  margin: 0 0 18rem;
+.inner {
+  position: relative;
+  margin: 0 auto;
+  width: 1240rem;
 }
-.page-tit {
-  font-size: 24rem;
-  font-weight: 700;
+.guide-inner {
+  position: relative;
+  margin: 0 auto;
+  width: 940rem;
+}
+.inner-wide {
+  margin: 0 auto;
+  width: 1240rem;
+}
+.tit-area {
+  margin: 0 0 32rem;
+}
+
+.page-sub-txt {
+  margin: 14rem 0 0;
+  color: $gray600;
+}
+
+.update-date {
+  display: block;
+  margin: 8rem 0 0;
+  color: $gray500;
+}
+
+body header .btn-menu:has(.active) {
+  overflow-y: hidden;
+}
+    
+@include tablet() {
+  .nav-bar {
+    display: flex;
+    position: sticky;
+    bottom: 0;
+    left: 0;
+    z-index: 10;
+    width: 100%;
+    align-items: center;
+    background: $white;
+
+    a {
+      display: block;
+      padding: 12rem 0;
+      width: calc(100% / 5);
+      text-align: center;
+      font-size: 14rem;
+    }
+
+    .nav-icon {
+      display: block;
+      width: 24rem;
+      margin: 0 auto;
+    }
+  }
+  .inner-wide {
+    width: 100%;
+  }
+  .inner {
+    margin: 0 auto;
+    width: calc(100% - 48rem);
+  }
+  .guide-inner {
+    margin: 0 auto;
+    width: calc(100% - 48rem);
+  }
+  .tit-area {
+    margin: 0 0 18rem;
+    // text-align: center;
+  }
+  .page-tit {
+    font-size: 24rem;
+    font-weight: 700;
+  }
 }
